# fine-tuning-workflow

./: .gitignore  hello.py  pyproject.toml
image-analysis/: json-to-html.py  main.py  model-detection.py  parser.py
image-analysis/output/: design_20250131181053.json  design_20250131190417.json  design_20250131191040.json  design_20250131191829.html  design_20250131232529.json  design_20250131233815.html  design_20250131234602.json  design_20250131234631.html  design_20250131235312.html  design_20250131235749.html  design_20250201001738.html  design_20250201002146.json  design_20250201002215.html  design_20250201002357.html  design_20250201003009.json  design_20250201014535.html  design_20250201014902.json  design_20250201014922.html  design_20250201021412.json  design_20250201021438.html  design_20250201023056.json  design_20250201023400.json  design_20250201023432.html  design_20250201024026.json  design_20250201024542.json  design_20250201024549.html  design_20250201024618.json  design_20250201024624.html  design_20250201025029.json  design_20250201025110.html  design_20250201025132.json  design_20250201025137.html  design_20250201044228.html  design_20250201044928.html  design_20250201050112.html  design_20250201052145.html  design_20250201054120.html  design_20250202021605.json  design_20250202021656.html  design_20250202024941.html  (+34 more)
plugins/image/: image_detection.py
plugins/text/: color_detection.py  text_css_properties.py
