[project]
name = "training-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "scipy>=1.15.1",
    "svgwrite>=1.4.3",
]
