[project]
name = "training-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "svgwrite>=1.4.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.2",
    "ultralytics>=8.3.23",
]
